--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -1,59 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="activity"
-            type="com.example.sopt_seminar.ui.SignInFragment" />
-        <variable
-            name="id"
-            type="String" />
-        <variable
-            name="password"
-            type="String" />
+            type="com.example.sopt_seminar.ui.SignUpFragment" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/sign_up_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
-            android:id="@+id/sign_in_fragment"
-            tools:context="com.example.sopt_seminar.ui.SignInFragment"
-            >
+            tools:context="com.example.sopt_seminar.ui.SignUpFragment">
 
             <TextView
-                android:id="@+id/sign_in_title"
+                android:id="@+id/sign_up_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="120dp"
-                android:text="SOPT"
-                android:textSize="60sp"
+                android:text="@string/sign_up_text"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/name_input_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/name_text"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/sign_up_name_et"
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />
+
+            <EditText
+                android:id="@+id/sign_up_name_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/name_hint"
+                android:inputType="text"
+                android:maxLines="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/name_input_text" />
+
+            <TextView
                 android:id="@+id/id_input_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
-                android:text="아이디"
+                android:text="@string/id_text"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/sign_in_id_et"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />
+                app:layout_constraintStart_toStartOf="@+id/sign_up_id_et"
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_name_et" />
 
             <EditText
-                android:id="@+id/sign_in_id_et"
+                android:id="@+id/sign_up_id_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="아이디를 입력해주세요"
-                android:text="@{id}"
+                android:hint="@string/id_hint"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,18 +81,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
-                android:text="비밀번호"
+                android:text="@string/password_text"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_id_et" />
+                app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_id_et" />
 
             <EditText
-                android:id="@+id/sign_in_password_et"
+                android:id="@+id/sign_up_password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="비밀번호를 입력해주세요"
-                android:text="@{password}"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -84,28 +99,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/password_input_text" />
 
             <Button
-                android:id="@+id/sign_in_login_btn"
+                android:id="@+id/sign_up_clear_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
-                android:text="Login"
-                app:layout_constraintEnd_toEndOf="@+id/sign_in_password_et"
+                android:onClick="@{()->activity.signUp(signUpNameEt.getText().toString(),signUpIdEt.getText().toString(),signUpPasswordEt.getText().toString())}"
+                android:text="@string/sign_up_finish_text"
+                app:layout_constraintEnd_toEndOf="@+id/sign_up_password_et"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" />
-
-            <Button
-                android:id="@+id/sign_in_clear_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
-                android:text="회원가입"
-                android:onClick="@{()->activity.goMainActivity()}"
-                app:layout_constraintEnd_toEndOf="@+id/sign_in_login_btn"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/sign_in_login_btn"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_login_btn" />
-
+                app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_et" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
