[Refactoring] 2nd commit
리팩토링 완료

--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -89,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
                 android:text="@string/login_text"
+                android:onClick="@{()->activity.login(signInIdEt.getText().toString(),signInPasswordEt.getText().toString())}"
                 app:layout_constraintEnd_toEndOf="@+id/sign_in_password_et"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" />
 
