--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/home_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/home_fragment"
-            tools:context="com.example.sopt_seminar.ui.HomeFragment"
-            >
+            tools:context="com.example.sopt_seminar.ui.HomeFragment">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
                 android:adjustViewBounds="true"
@@ -31,9 +30,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
-                android:text="이름: 강원용"
-                android:textSize="18sp"
+                android:text="@string/home_name"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.507"
                 app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -44,9 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="나이: 23"
-                android:textSize="18sp"
+                android:text="@string/home_age"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_name"
                 app:layout_constraintStart_toStartOf="@+id/user_name"
                 app:layout_constraintTop_toBottomOf="@+id/user_name" />
@@ -56,24 +55,44 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="MBTI: ISTJ"
-                android:textSize="18sp"
+                android:text="@string/home_mbti"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_age"
                 app:layout_constraintStart_toStartOf="@+id/user_age"
                 app:layout_constraintTop_toBottomOf="@+id/user_age" />
 
-            <TextView
-                android:id="@+id/user_etc"
-                android:layout_width="20sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:text="@string/test_text"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/user_mbti"
-                app:layout_constraintStart_toStartOf="@+id/user_mbti"
-                app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/home_tab"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/user_mbti"
+                app:tabIndicatorColor="@color/black"
+                app:tabSelectedTextColor="@color/black">
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:text="@string/home_follower_btn" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:text="@string/home_repository_btn" />
+            </com.google.android.material.tabs.TabLayout>
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/home_fragment_cv"
+                android:layout_width="match_parent"
+                android:layout_height="450dp"
+                android:padding="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_tab" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
