--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,15 +9,15 @@
         android:id="@+id/sign_in_fragment"
         android:name="com.example.sopt_seminar.ui.SignInFragment"
         android:label="sign_in_activity"
-        tools:layout="@layout/sign_in_fragment" >
+        tools:layout="@layout/sign_in_fragment">
         <argument
             android:name="userId"
-            app:argType="string"
-            android:defaultValue="" />
+            android:defaultValue=""
+            app:argType="string" />
         <argument
             android:name="userPassword"
-            app:argType="string"
-            android:defaultValue="" />
+            android:defaultValue=""
+            app:argType="string" />
         <action
             android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
             app:destination="@id/sign_up_fragment" />
@@ -30,21 +30,20 @@
         android:id="@+id/sign_up_fragment"
         android:name="com.example.sopt_seminar.ui.SignUpFragment"
         android:label="sign_up_activity"
-        tools:layout="@layout/sign_up_fragment" >
+        tools:layout="@layout/sign_up_fragment">
         <action
             android:id="@+id/action_sign_up_fragment_to_sign_in_fragment"
             app:destination="@id/sign_in_fragment"
             app:popUpTo="@id/nav_graph"
-            app:popUpToInclusive="true"
-            >
+            app:popUpToInclusive="true">
             <argument
                 android:name="userId"
-                app:argType="string"
-                android:defaultValue="" />
+                android:defaultValue=""
+                app:argType="string" />
             <argument
                 android:name="userPassword"
-                app:argType="string"
-                android:defaultValue="" />
+                android:defaultValue=""
+                app:argType="string" />
         </action>
     </fragment>
 
@@ -52,6 +51,33 @@
         android:id="@+id/home_fragment"
         android:name="com.example.sopt_seminar.ui.HomeFragment"
         android:label="home_activty"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment">
+        <action
+            android:id="@+id/action_home_fragment_to_detailFragment"
+            app:destination="@id/detailFragment">
+            <argument
+                android:name="followerName"
+                android:defaultValue=""
+                app:argType="string" />
+            <argument
+                android:name="followerDes"
+                android:defaultValue=""
+                app:argType="string" />
+        </action>
+    </fragment>
 
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.sopt_seminar.ui.DetailFragment"
+        android:label="DetailFragment"
+        tools:layout="@layout/detail_fragment">
+        <argument
+            android:name="followerName"
+            android:defaultValue=""
+            app:argType="string" />
+        <argument
+            android:name="followerDes"
+            android:defaultValue=""
+            app:argType="string" />
+    </fragment>
 </navigation>
