--- a/app/src/main/res/layout/repo_frame.xml
+++ b/app/src/main/res/layout/repo_frame.xml
@@ -6,6 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:elevation="2dp"
         app:strokeColor="@color/black"
         app:strokeWidth="1dp">
 
