--- a/app/src/main/res/layout/follower_frame.xml
+++ b/app/src/main/res/layout/follower_frame.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="follower"
+            type="com.example.sopt_seminar.domain.model.Follower" />
+    </data>
+
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +35,7 @@
                 android:id="@+id/follower_name_tv"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
+                android:text="@{follower.name}"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +48,7 @@
                 android:layout_height="25dp"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:text="@{follower.description}"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
