--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -3,6 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="fragmentManager"
+            type="androidx.fragment.app.FragmentManager" />
+
+        <variable
+            name="follower"
+            type="com.example.sopt_seminar.ui.FollowerFragment" />
+
+        <variable
+            name="repo"
+            type="com.example.sopt_seminar.ui.RepoFragment" />
+    </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -62,27 +77,29 @@
                 app:layout_constraintStart_toStartOf="@+id/user_age"
                 app:layout_constraintTop_toBottomOf="@+id/user_age" />
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/home_tab"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/user_mbti"
-                app:tabIndicatorColor="@color/black"
-                app:tabSelectedTextColor="@color/black">
+            <Button
+                android:id="@+id/follower_btn"
+                childFragment="@{follower}"
+                fragmentManger="@{fragmentManager}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:text="@string/home_follower_btn"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toStartOf="@+id/user_mbti"
+                app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:text="@string/home_follower_btn" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:text="@string/home_repository_btn" />
-            </com.google.android.material.tabs.TabLayout>
+            <Button
+                android:id="@+id/repo_btn"
+                childFragment="@{repo}"
+                fragmentManger="@{fragmentManager}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:text="@string/home_repository_btn"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toEndOf="@+id/user_mbti"
+                app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/home_fragment_cv"
@@ -91,7 +108,7 @@
                 android:padding="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/home_tab" />
+                app:layout_constraintTop_toBottomOf="@+id/follower_btn" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
