[REFACTOR] recyclerview bindingAdapter
- onViewCreated 깔끔해지고 싶어서 bindAdapter 사용했다
- 이게 잘 활용한건지 남용인지 구분이 안간다
- adapterPosition 은 다음에...ㅠㅠ

--- a/app/src/main/res/layout/repo_fragment.xml
+++ b/app/src/main/res/layout/repo_fragment.xml
@@ -2,20 +2,30 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="main"
+            type="com.example.sopt_seminar.ui.RepoFragment" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/repo_recycler_view"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
+            bindList="@{main.getList()}"
+            moveItem="@{main.moveItem}"
+            removeItem="@{main.removeItem}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:spanCount="2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
