--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -42,11 +42,11 @@
 
             <TextView
                 android:id="@+id/user_name"
+                style="@style/customTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:text="@string/home_name"
-                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.507"
@@ -55,11 +55,11 @@
 
             <TextView
                 android:id="@+id/user_age"
+                style="@style/customTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/home_age"
-                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_name"
                 app:layout_constraintStart_toStartOf="@+id/user_name"
@@ -67,11 +67,11 @@
 
             <TextView
                 android:id="@+id/user_mbti"
+                style="@style/customTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/home_mbti"
-                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_age"
                 app:layout_constraintStart_toStartOf="@+id/user_age"
