--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/id_text"
-                android:textColor="@color/black"
+                style="@style/customTextView"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/password_text"
-                android:textColor="@color/black"
+                style="@style/customTextView"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_id_et" />
