--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/detail_name_tv"
-            style="@style/customTextView"
+            style="@style/custom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="236dp"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/detail_des_tv"
-            style="@style/customTextView"
+            style="@style/custom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="72dp"
