--- a/app/src/main/res/layout/repo_frame.xml
+++ b/app/src/main/res/layout/repo_frame.xml
@@ -25,7 +25,7 @@
 
             <TextView
                 android:id="@+id/repo_name_tv"
-                style="@style/customTextView"
+                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:maxLines="1"
@@ -36,7 +36,7 @@
 
             <TextView
                 android:id="@+id/repo_des_tv"
-                style="@style/customTextView"
+                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:ellipsize="end"
