--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -35,7 +35,7 @@
 
             <TextView
                 android:id="@+id/name_input_text"
-                style="@style/customTextView"
+                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -57,7 +57,7 @@
 
             <TextView
                 android:id="@+id/id_input_text"
-                style="@style/customTextView"
+                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
@@ -79,7 +79,7 @@
 
             <TextView
                 android:id="@+id/password_input_text"
-                style="@style/customTextView"
+                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
