--- a/app/src/main/res/layout/follower_frame.xml
+++ b/app/src/main/res/layout/follower_frame.xml
@@ -24,10 +24,10 @@
 
             <ImageView
                 android:id="@+id/follower_img"
+                setDrawable="@{follower.profile}"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:contentDescription="@string/null_des"
-                android:src="@drawable/ic_baseline_person_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
