[ADD] Add home fragment
tabLayout + viewPager 추가

--- a/app/src/main/res/layout/follower_list_fragment.xml
+++ b/app/src/main/res/layout/follower_list_fragment.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="main"
-            type="com.example.sopt_seminar.ui.FollowerFragment" />
+            type="com.example.sopt_seminar.ui.FollowerListFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
