[CHORE] Change style to textappearance
style에서 textappearance로 변경

--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -13,10 +13,10 @@
         tools:context=".ui.FollowingFragment">
 
         <TextView
-            style="@style/custom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wait_tv"
+            android:textAppearance="@style/TextAppearance.Common"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
