--- a/app/src/main/res/layout/follower_frame.xml
+++ b/app/src/main/res/layout/follower_frame.xml
@@ -33,24 +33,24 @@
 
             <TextView
                 android:id="@+id/follower_name_tv"
-                style="@style/custom_text"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:text="@{follower.name}"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/follower_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/follower_des_tv"
-                style="@style/custom_text"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{follower.description}"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/follower_img"
                 app:layout_constraintTop_toBottomOf="@+id/follower_name_tv" />
