--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,11 +27,11 @@
 
         <TextView
             android:id="@+id/home_tv"
-            style="@style/custom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/github_tv"
+            android:textAppearance="@style/TextAppearance.Common"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="@+id/home_img"
             app:layout_constraintStart_toStartOf="@+id/home_img"
