--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -8,10 +8,6 @@
         <variable
             name="drawable"
             type="int" />
-
-        <variable
-            name="main"
-            type="com.example.sopt_seminar.ui.ProfileFragment" />
     </data>
 
     <ScrollView
@@ -38,11 +34,11 @@
 
             <TextView
                 android:id="@+id/user_name"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:text="@string/home_name"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.507"
@@ -51,11 +47,11 @@
 
             <TextView
                 android:id="@+id/user_age"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/home_age"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_name"
                 app:layout_constraintStart_toStartOf="@+id/user_name"
@@ -63,35 +59,33 @@
 
             <TextView
                 android:id="@+id/user_mbti"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/home_mbti"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_age"
                 app:layout_constraintStart_toStartOf="@+id/user_age"
                 app:layout_constraintTop_toBottomOf="@+id/user_age" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/follower_btn"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_txt_selector"
                 android:text="@string/home_follower_btn"
-                app:backgroundTint="@null"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintEnd_toStartOf="@+id/user_mbti"
                 app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/repo_btn"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_txt_selector"
                 android:text="@string/home_repository_btn"
-                app:backgroundTint="@null"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintStart_toEndOf="@+id/user_mbti"
                 app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
