--- a/app/src/main/res/layout/repo_frame.xml
+++ b/app/src/main/res/layout/repo_frame.xml
@@ -25,23 +25,23 @@
 
             <TextView
                 android:id="@+id/repo_name_tv"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:maxLines="1"
                 android:text="@{repo.name}"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/repo_des_tv"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{repo.description}"
+                android:textAppearance="@style/TextAppearance.Common"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/repo_name_tv" />
