--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="activity"
             type="com.example.sopt_seminar.ui.SignInFragment" />
+
         <variable
             name="id"
             type="String" />
+
         <variable
             name="password"
             type="String" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/sign_in_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
-            android:id="@+id/sign_in_fragment"
-            tools:context="com.example.sopt_seminar.ui.SignInFragment"
-            >
+            tools:context="com.example.sopt_seminar.ui.SignInFragment">
 
             <TextView
                 android:id="@+id/sign_in_title"
@@ -43,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/id_text"
-                style="@style/custom_text"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />
@@ -53,9 +57,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/id_hint"
-                android:text="@{id}"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:text="@{id}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/id_input_text" />
@@ -66,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/password_text"
-                style="@style/custom_text"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_id_et" />
@@ -76,9 +80,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password_hint"
-                android:text="@{password}"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:text="@{password}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password_input_text" />
@@ -88,8 +92,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
-                android:text="@string/login_text"
                 android:onClick="@{()->activity.login(signInIdEt.getText().toString(),signInPasswordEt.getText().toString())}"
+                android:text="@string/login_text"
                 app:layout_constraintEnd_toEndOf="@+id/sign_in_password_et"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" />
@@ -99,8 +103,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/green"
-                android:text="@string/sign_up_text"
                 android:onClick="@{()->activity.goMainActivity()}"
+                android:text="@string/sign_up_text"
                 app:layout_constraintEnd_toEndOf="@+id/sign_in_login_btn"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_login_btn"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_login_btn" />
