--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -35,11 +35,11 @@
 
             <TextView
                 android:id="@+id/name_input_text"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/name_text"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_name_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />
@@ -57,11 +57,11 @@
 
             <TextView
                 android:id="@+id/id_input_text"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/id_text"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_name_et" />
@@ -79,11 +79,11 @@
 
             <TextView
                 android:id="@+id/password_input_text"
-                style="@style/custom_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/password_text"
+                android:textAppearance="@style/TextAppearance.Common"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_id_et" />
