--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/profile_menu"
         android:icon="@drawable/ic_profile"
-        android:title="@string/profile_menu_text"
-        app:itemTextAppearance="@style/custom_text" />
+        android:textAppearance="@style/TextAppearance.Common"
+        android:title="@string/profile_menu_text" />
     <item
         android:id="@+id/home_menu"
         android:icon="@drawable/ic_home"
-        android:title="@string/home_menu_text"
-        app:itemTextAppearance="@style/custom_text" />
+        android:textAppearance="@style/TextAppearance.Common"
+        android:title="@string/home_menu_text" />
     <item
         android:id="@+id/home_camera"
         android:icon="@drawable/ic_camera"
-        android:title="@string/camera_menu_text"
-        app:itemTextAppearance="@style/custom_text" />
+        android:textAppearance="@style/TextAppearance.Common"
+        android:title="@string/camera_menu_text" />
 </menu>
