--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="236dp"
             android:text="@{follower_name}"
-            android:textAppearance="@style/TextAppearance.Common"
+            android:textAppearance="@style/common_text"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="72dp"
             android:text="@{follower_des}"
-            android:textAppearance="@style/TextAppearance.Common"
+            android:textAppearance="@style/common_text"
             android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
