--- a/app/src/main/res/layout/follower_frame.xml
+++ b/app/src/main/res/layout/follower_frame.xml
@@ -37,7 +37,7 @@
                 android:layout_height="25dp"
                 android:text="@{follower.name}"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/follower_img"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +50,7 @@
                 android:maxLines="1"
                 android:text="@{follower.description}"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/follower_img"
                 app:layout_constraintTop_toBottomOf="@+id/follower_name_tv" />
