--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:text="@string/home_name"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.507"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/home_age"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_name"
                 app:layout_constraintStart_toStartOf="@+id/user_name"
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/home_mbti"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/user_age"
                 app:layout_constraintStart_toStartOf="@+id/user_age"
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_txt_selector"
                 android:text="@string/home_follower_btn"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 app:layout_constraintEnd_toStartOf="@+id/user_mbti"
                 app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_txt_selector"
                 android:text="@string/home_repository_btn"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 app:layout_constraintStart_toEndOf="@+id/user_mbti"
                 app:layout_constraintTop_toBottomOf="@+id/user_mbti" />
 
