--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/id_text"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/password_text"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_id_et" />
