--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/name_text"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_name_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/id_text"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_name_et" />
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:text="@string/password_text"
-                android:textAppearance="@style/TextAppearance.Common"
+                android:textAppearance="@style/common_text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_id_et" />
