--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="activity"
-            type="com.example.sopt_seminar.ui.SignUpFragment" />
+            name="vm"
+            type="com.example.sopt_seminar.ui.viewmodel.SignUpViewModel" />
     </data>
 
     <ScrollView
@@ -51,6 +51,7 @@
                 android:hint="@string/name_hint"
                 android:inputType="text"
                 android:maxLines="1"
+                android:text="@={vm.nameText}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/name_input_text" />
@@ -73,6 +74,7 @@
                 android:hint="@string/id_hint"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:text="@={vm.idText}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/id_input_text" />
@@ -95,16 +97,19 @@
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:text="@={vm.pwText}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password_input_text" />
 
             <Button
                 android:id="@+id/sign_up_clear_btn"
+                errorMsg="@{vm.errorMsg}"
+                isError="@{vm.isError}"
+                android:onClick="@{()->vm.checkInput()}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
-                android:onClick="@{()->activity.signUp(signUpNameEt.getText().toString(),signUpIdEt.getText().toString(),signUpPasswordEt.getText().toString())}"
                 android:text="@string/sign_up_finish_text"
                 app:layout_constraintEnd_toEndOf="@+id/sign_up_password_et"
                 app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
