--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,7 @@
         <action
             android:id="@+id/action_sign_up_fragment_to_sign_in_fragment"
             app:destination="@id/sign_in_fragment"
-            app:popUpTo="@id/nav_graph"
+            app:popUpTo="@id/sign_in_fragment"
             app:popUpToInclusive="true">
             <argument
                 android:name="userId"
