--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -18,7 +18,7 @@
             android:id="@+id/home_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context="com.example.sopt_seminar.ui.ProfileFragment">
+            tools:context="com.example.sopt_seminar.ui.profile.ProfileFragment">
 
             <ImageView
                 android:id="@+id/imageView"
