[FEAT] 깃허브 팔로워 리스트 연동

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,6 +60,10 @@
             android:name="followerDes"
             android:defaultValue=""
             app:argType="string" />
+        <argument
+            android:name="followerImg"
+            android:defaultValue=""
+            app:argType="string" />
     </fragment>
 
     <fragment
@@ -75,6 +79,10 @@
                 app:argType="string" />
             <argument
                 android:name="followerDes"
+                android:defaultValue=""
+                app:argType="string" />
+            <argument
+                android:name="followerImg"
                 android:defaultValue=""
                 app:argType="string" />
         </action>
