--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -12,6 +12,11 @@
         <variable
             name="follower_des"
             type="String" />
+
+        <variable
+            name="follower_img"
+            type="String" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,17 +24,27 @@
         android:layout_height="match_parent"
         tools:context="com.example.sopt_seminar.ui.profile.DetailFragment">
 
+        <ImageView
+            android:id="@+id/detail_img"
+            setDrawable="@{follower_img}"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="104dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/detail_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="236dp"
+            android:layout_marginTop="44dp"
             android:text="@{follower_name}"
             android:textAppearance="@style/common_text"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/detail_img" />
 
         <TextView
             android:id="@+id/detail_des_tv"
@@ -40,7 +55,6 @@
             android:textAppearance="@style/common_text"
             android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detail_name_tv" />
 
