--- a/app/src/main/res/layout/follower_list_fragment.xml
+++ b/app/src/main/res/layout/follower_list_fragment.xml
@@ -2,12 +2,21 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.example.sopt_seminar.ui.profile.followerlist.FollowerListViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/follower_recycler_view"
+            errorMsg="@{vm.uiState.errorMsg}"
+            isError="@{vm.uiState.error}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
