--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="img"
-            type="int" />
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
