--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="drawable"
-            type="int" />
+            type="String" />
     </data>
 
     <ScrollView
